Corrected heading alignment

--- a/src/main.css
+++ b/src/main.css
@@ -62,3 +62,7 @@ time {
   max-width: 700px;
   margin: 0 auto;
 }
+
+.page h2 {
+  text-align: left;
+}
